# aiq-magnet

./: .gitignore  .readthedocs.yml  CHANGELOG.md  README.md  README.rst  predict_inputs_exploration.ipynb  pyproject.toml  requirements.lock.txt  run_tests.py
.github/workflows/: release.yml  tests.yml
dev/benchmark/: benchmark_loaders.py
dev/codex/: helm-reproduction-agent-brief.md  helm-reproduction-research-journal.md  helm-reproduction-status-checkpoint.md  kwdagger-notes.md  reproduce-helm-session-v2.md
dev/experiments/audit-helm-reproduction/: README.md
dev/experiments/audit-helm-reproduction/examples/: example_overnight_commands.sh  example_smoke_commands.sh
dev/experiments/audit-helm-reproduction/python/: aggregate_core_reports.py  analyze_experiment_from_index.py  build_repro_manifest.py  common.py  compare_batch.py  compare_pair.py  core_metric_report.py  index_results.py  make_manifest.py  paper_labels.py  rebuild_all_core_reports_from_index.py  rebuild_core_report_from_index.py  render_schedule_params.py
dev/experiments/audit-helm-reproduction/scripts/: analyze_experiment_from_index.sh  check_env.sh  common.sh  compare_batch.sh  compare_entry.sh  compare_pair.sh  core_metric_report.sh  inspect_pair_samples.sh  make_apples_manifest.sh  make_historic_grid_manifest.sh  make_machine_shard_manifest.sh  make_machine_subset_manifest.sh  make_repeat_pair_manifests.sh  make_smoke_manifest.sh  make_vicuna_nochat_manifest.sh  metric_quantiles_report.sh  resolve_run.sh  run_from_manifest.sh  run_smoke.sh
dev/maintain/: update_xcookie.sh
dev/oneoff/: check_results_overlap.py  diagnose_reproducibility.py
dev/poc/: inspect_historic_helm_runs.py  poc_read_heim.py  poc_read_heim_v2.py  poc_read_heim_v3.py  prepare_heim_results.py
dev/scripts/: download_helm_results.sh
dockerfiles/: README.md  build_and_publish_images.sh  magnet-heim.build_and_publish.sh  magnet-heim.dockerfile  magnet.build_and_publish.sh  magnet.dockerfile  uv.build_and_publish.sh  uv.dockerfile
docs/source/: conf.py  index.rst
docs/source/manual/: running_heim.rst
magnet/: __init__.py  __main__.py  evaluation.py  example_dkps.py  example_dkps_instance_predictor.py  example_perturbation_predictor.py  example_random_instance_predictor.py  example_random_predictor.py  helm_inference.py  helm_outputs.py  instance_predictor.py  loaders.py  perturb_instances.py  predictor.py  run_example_pipeline.sh  schema.py
magnet/backends/helm/: download_helm_results.py  helm_hashers.py  helm_outputs.py  helm_run_analysis.py  helm_run_diff.py  helm_summarize_mixin.py  inspect_helm_models.py  magnet_run_helm.py  materialize_helm_run.py  models.py  pipeline.py  scenarios.py
magnet/backends/helm/cli/: download_helm_results.py  inspect_helm_models.py  materialize_helm_run.py  materialize_helm_run_from_spec.py
magnet/backends/helm/run_specs/: __init__.py
magnet/backends/helm/rundiff/: compare.py  drilldown.py  io.py  run_analysis.py  sankey.py
magnet/backends/helm/scenarios/: __init__.py
magnet/backends/inspect_ai/: inspect_ai_outputs.py
magnet/cards/: llama.yaml  llama_kwdagger.yaml  llama_pipeline.yaml  simple.yaml
magnet/cli/: download_cli.py  main.py
magnet/demo/: helm_demodata.py
magnet/examples/llama_consistency/: claim.py  llama_predict.py  pipelines.py
magnet/llama_consistency/: pipelines.py
magnet/llama_consistency/cli/: claim.py  llama_predict.py
magnet/utils/: sankey.py  sankey_builder.py  util_logger.py  util_msgspec.py  util_pandas.py
requirements/: runtime.txt
tests/: test_helm_output_loader.py  test_helm_run_diff_heavy.py  test_helm_run_diff_serializable.py  test_llama_cards.py  test_materialize_from_spec.py  test_materialize_helm_run_matching.py  test_prepare_local_helm_config.py  test_schema.py
