[build-system]
requires = ["setuptools >= 80.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
namespaces = true
include = ["magnet*"]


[project]
name = "aiq-magnet"
version = "0.0.1"
description = "Kitware's MAGNET framework for AIQ"
authors = [
    {name = "MAGNET Kitware", email = "kitware@kitware.com"}
]
urls = { "Repository" = "https://github.com/AIQ-Kitware/aiq-magnet/" }
requires-python = ">=3.11"
dependencies = [
    "crfm-helm>=0.5.5",
    "pandas>=2.2.3",
    "dacite>=1.9.2",
    "ubelt>=1.3.8",
    "lazy_loader>=0.4",
    "scikit-learn>=1.7.1",
    "h5py>=3.14.0",
    "numexpr>=2.11.0",
    "kwarray>=0.7.1",
    "kwutil>=0.3.7", 
    "pygtrie>=2.5.0",
    "scriptconfig>=0.8.2",
    "orjson>=3.10.15",
    "msgspec>=0.19.0",
]

[project.optional-dependencies]

tests = [
    "xdoctest>=1.2.0",
    "pytest>=8.1.1",
    "coverage>=7.3.0",
    "pytest-cov>=3.0.0",
]

optional = [
]

[tool.pytest.ini_options]
addopts = "--xdoctest --xdoctest-style=google --ignore-glob=docs"
norecursedirs = ".git build __pycache__ dev docs"

[tool.mypy]
disable_error_code = ["import-untyped"]
