[build-system]
requires = ["setuptools >= 80.9.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
namespaces = true
include = ["magnet*"]

[tool.setuptools.package-data]
magnet = ["cards/*.yaml"]

[tool.setuptools.dynamic]
version = {attr = "magnet.__version__"}

[project]
name = "aiq-magnet"
dynamic = ["version"]
description = "Kitware's MAGNET framework for AIQ"
authors = [
    {name = "MAGNET Kitware", email = "aiq-ta2@kitware.com"}
]
urls = { "Repository" = "https://github.com/AIQ-Kitware/aiq-magnet/" }
requires-python = ">=3.10"
dependencies = [
    "crfm-helm @ git+https://github.com/AIQ-Kitware/helm@kitware-main",
    "pandas>=2.2.3",
    "dacite>=1.9.2",
    "ubelt>=1.3.8",
    "lazy_loader>=0.4",
    "scikit-learn>=1.7.1",
    "h5py>=3.14.0",
    "numexpr>=2.11.0",
    "kwarray>=0.7.1",
    "kwutil>=0.3.7", 
    "pygtrie>=2.5.0",
    "scriptconfig>=0.8.4",
    "orjson>=3.10.15",
    "msgspec>=0.19.0",
    "rich>=14.1.0",
    "fsspec>=2024.9.0",
    "pyyaml>=6.0.2",
    "typing-extensions>=4.0.0",
    "ruamel.yaml>=0.17.22",
]

[project.optional-dependencies]

tests = [
    "xdoctest>=1.2.0",
    "pytest>=8.1.1",
    "coverage>=7.3.0",
    "pytest-cov>=3.0.0",
]

optional = [
    "gcsfs>=2024.9.0",
]

all = [
    "aiq-magnet[optional]",
    "aiq-magnet[tests]",
]

docs = [
    "sphinx >= 4.3.2",
    "sphinx-autobuild >= 2021.3.14",
    "sphinx_rtd_theme >= 1.0.0",
    "sphinxcontrib-napoleon >= 0.7",
    "sphinx-autoapi >= 1.8.4",
    "Pygments >= 2.9.0",
    "myst_parser >= 0.16.1",
    "sphinx-reredirects >= 0.0.1",
]

[project.scripts]
magnet = "magnet.__main__:main"
magnet-helm-run = "magnet.backends.helm.magnet_run_helm:main"

[project.entry-points.helm]
run_specs = "magnet.backends.helm.run_specs"

[tool.pytest.ini_options]
addopts = "--xdoctest --xdoctest-style=google --ignore-glob=docs"
norecursedirs = ".git build __pycache__ dev docs dockerfiles"

[tool.mypy]
disable_error_code = ["import-untyped"]


[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"


[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    ".*  # pragma: no cover",
    ".*  # nocover",
]
